--- a/view/dialog-grow-nongshi.html
+++ b/view/dialog-grow-nongshi.html
@@ -21,7 +21,7 @@
     </div>
    
     <!-- 农事评估 -->
-    <div class="dialog-scheduling scheduling-add-content">
+    <div class="dialog-scheduling scheduling-nongshi-content">
       <div class="dialog-content">
       <p class="center border-bottom pb10">农事评估<span class="right color-gray close-add">X</span></p>
       <p class="text-left border-bottom pb10 mt20">农事评估信息</p>
