--- a/view/growMgmt.html
+++ b/view/growMgmt.html
@@ -39,9 +39,9 @@
               </div>
               <div class="left w07">
                 <p><span class="color-gray">BJ-01-01号大棚 </span>
-                  <a href="#"><img src="../images/cccc_03.png" class="cheduling-icon vs" style="margin-left:10px;"></a> 
+                  <a href="growRecord.html"><img src="../images/cccc_03.png" class="cheduling-icon vs" style="margin-left:10px;"></a> 
                   <img src="../images/tu_21.png" class="right scheduling-icon grow-delete">
-                  <img src="../images/tu_15.png" class="right scheduling-icon">
+                  <img src="../images/tu_15.png" class="right scheduling-icon scheduling-edit">
                 </p>
                 <p class="mt10 to-grow-message">青花菜(西兰花)-青秀花菜</p>
                 <span class="font12 color-gray" style="margin:3px 0 0 30%">12天</span>
@@ -205,9 +205,9 @@
               </div>
               <div class="left w07">
                 <p><span class="color-gray">BJ-01-01号大棚 </span>
-                  <a href="#"><img src="../images/cccc_03.png" class="cheduling-icon vs" style="margin-left:10px;"></a> 
+                  <a href="growRecord.html"><img src="../images/cccc_03.png" class="cheduling-icon vs" style="margin-left:10px;"></a> 
                   <img src="../images/tu_21.png" class="right scheduling-icon grow-delete">
-                  <img src="../images/tu_15.png" class="right scheduling-icon">
+                  <img src="../images/tu_15.png" class="right scheduling-icon scheduling-edit">
                 </p>
                 <p class="mt10 to-grow-message">青花菜(西兰花)-青秀花菜</p>
                 <span class="font12 color-gray" style="margin:3px 0 0 30%">12天</span>
@@ -228,9 +228,9 @@
               </div>
               <div class="left w07">
                 <p><span class="color-gray">BJ-01-01号大棚 </span>
-                  <a href="#"><img src="../images/cccc_03.png" class="cheduling-icon vs" style="margin-left:10px;"></a> 
+                  <a href="growRecord.html"><img src="../images/cccc_03.png" class="cheduling-icon vs" style="margin-left:10px;"></a> 
                   <img src="../images/tu_21.png" class="right scheduling-icon grow-delete">
-                  <img src="../images/tu_15.png" class="right scheduling-icon">
+                  <img src="../images/tu_15.png" class="right scheduling-icon scheduling-edit">
                 </p>
                 <p class="mt10 to-grow-message">青花菜(西兰花)-青秀花菜</p>
                 <span class="font12 color-gray" style="margin:3px 0 0 30%">12天</span>
@@ -251,9 +251,9 @@
               </div>
               <div class="left w07">
                 <p><span class="color-gray">BJ-01-01号大棚 </span>
-                  <a href="#"><img src="../images/cccc_03.png" class="cheduling-icon vs" style="margin-left:10px;"></a> 
+                  <a href="growRecord.html"><img src="../images/cccc_03.png" class="cheduling-icon vs" style="margin-left:10px;"></a> 
                   <img src="../images/tu_21.png" class="right scheduling-icon grow-delete">
-                  <img src="../images/tu_15.png" class="right scheduling-icon">
+                  <img src="../images/tu_15.png" class="right scheduling-icon scheduling-edit">
                 </p>
                 <p class="mt10 to-grow-message">青花菜(西兰花)-青秀花菜</p>
                 <span class="font12 color-gray" style="margin:3px 0 0 30%">12天</span>
@@ -275,9 +275,9 @@
               </div>
               <div class="left w07">
                 <p><span class="color-gray">BJ-01-01号大棚 </span>
-                  <a href="#"><img src="../images/cccc_03.png" class="cheduling-icon vs" style="margin-left:10px;"></a> 
+                  <a href="growRecord.html"><img src="../images/cccc_03.png" class="cheduling-icon vs" style="margin-left:10px;"></a> 
                   <img src="../images/tu_21.png" class="right scheduling-icon grow-delete">
-                  <img src="../images/tu_15.png" class="right scheduling-icon">
+                  <img src="../images/tu_15.png" class="right scheduling-icon scheduling-edit">
                 </p>
                 <p class="mt10 to-grow-message">青花菜(西兰花)-青秀花菜</p>
                 <span class="font12 color-gray" style="margin:3px 0 0 30%">12天</span>
@@ -440,9 +440,9 @@
               </div>
               <div class="left w07">
                 <p><span class="color-gray">BJ-01-01号大棚 </span>
-                  <a href="#"><img src="../images/cccc_03.png" class="cheduling-icon vs" style="margin-left:10px;"></a> 
+                  <a href="growRecord.html"><img src="../images/cccc_03.png" class="cheduling-icon vs" style="margin-left:10px;"></a> 
                   <img src="../images/tu_21.png" class="right scheduling-icon grow-delete">
-                  <img src="../images/tu_15.png" class="right scheduling-icon">
+                  <img src="../images/tu_15.png" class="right scheduling-icon scheduling-edit">
                 </p>
                 <p class="mt10 to-grow-message">青花菜(西兰花)-青秀花菜</p>
                 <span class="font12 color-gray" style="margin:3px 0 0 30%">12天</span>
@@ -657,6 +657,50 @@
       <div class="center mt20">
         <span class="button bg-yellow mr20">保存</span>
         <span class="button bg-gray close-add">返回</span>
+      </div>
+      </div>
+    </div>
+      <!-- 编辑种植管理已选基地休耕状态-->
+    <div class="dialog-scheduling scheduling-edit-content hide">
+      <div class="dialog-content">
+      <p class="center border-bottom pb10">编辑种植信息<span class="right color-gray close-edit">X</span></p>
+      <p class="text-left border-bottom pb10 mt20">基本信息</p>
+      <div class="add-detail mb20">
+          <p class="mb10"><span class="mr30">种植区:</span><select class="select-160 mr20">
+            <option>BJ-01-01号大棚</option>
+            <option>BJ-01-01号大棚</option>
+          </select>
+            作物种类：
+          <select class="bg-gray select-160">
+            <option>休耕</option>
+          </select><p>
+          <p class="mb10">
+            种植品种：
+          <select class="select-160 mr20">
+            <option>无品种</option>
+            <option>津优1号</option>
+          </select>
+            种植标准：
+           <select class="select-160">
+            <option>有机</option>
+            <option>绿色</option>
+            <option>无公害</option>
+          </select>
+          </p>
+        </div>
+      <p class="text-left border-bottom pb10 mt20">休耕时间</p>
+      <div class="add-detail">
+           <p>开始时间：
+          <input type="date" class="select-160 mr20">
+          结束时间：
+           <input type="date" class="select-160">
+        </p>
+        <p>作物种类：
+          <input type="text" class="pinzhong"> <span>亩/3.9亩可用</p>
+      </div>
+      <div class="center mt20">
+        <span class="button bg-yellow mr20">保存</span>
+        <span class="button bg-gray close-edit">返回</span>
       </div>
       </div>
     </div>
