--- a/view/schedulingPlan.html
+++ b/view/schedulingPlan.html
@@ -32,7 +32,7 @@
         <input type="text" placeholder="请输入区域">
         <button>搜索</button>
       </div>
-      <div class="scheduling-detail">
+      <div class="scheduling-detail plan-table">
         <table class="border tr-26">
           <tr class="h26">
             <td rowspan="2" class="border"></td>
