--- a/view/growMgmt.html
+++ b/view/growMgmt.html
@@ -264,6 +264,29 @@
                   <img src="../images/cccc_07.png" height="12" width="12" style=" margin-left:23%">
                   <span class="right color-gray font12">5.12</span>
                 </p>
+              </div>       
+            </div>
+            <div class="grow-content">
+              <img src="../images/xx_11.png" height="12" width="22" class="arrow-grow hide">
+              <div class="left grow-img">
+                <img src="../images/grow.png">
+                <span>面积 10 亩</span>
+              </div>
+              <div class="left w07">
+                <p><span class="color-gray">BJ-01-01号大棚 </span>
+                  <a href="#"><img src="../images/cccc_03.png" class="cheduling-icon vs" style="margin-left:10px;"></a> 
+                  <img src="../images/tu_21.png" class="right scheduling-icon">
+                  <img src="../images/tu_15.png" class="right scheduling-icon">
+                </p>
+                <p class="mt10 to-grow-message">青花菜(西兰花)-青秀花菜</p>
+                <span class="font12 color-gray" style="margin:3px 0 0 30%">12天</span>
+                <p style="margin-top:-5px;">
+                  <span class="bg-green grow-time" style="width:40%"></span>
+                  <span class="bg-gray grow-time" style="width:60%"></span>
+                  <span class="left color-gray font12">4.12</span>
+                  <img src="../images/cccc_07.png" height="12" width="12" style=" margin-left:23%">
+                  <span class="right color-gray font12">5.12</span>
+                </p>
               </div>        
             </div>
 
