--- a/view/dialog-recovery-add.html
+++ b/view/dialog-recovery-add.html
@@ -21,9 +21,9 @@
     </div>
    
     <!-- 编辑采收-->
-    <div class="dialog-scheduling recovery-edit-content">
+    <div class="dialog-scheduling recovery-add-content">
       <div class="dialog-content">
-        <p class="center border-bottom pb10">编辑采收<span class="right color-gray close-add">X</span></p>
+        <p class="center border-bottom pb10">添加采收<span class="right color-gray close-add">X</span></p>
          <p class="text-left border-bottom pb10 mt20">作物信息</p>
         <div class="add-detail mb10">
             <p class="mb10">
