--- a/view/dialog-recovery-record.html
+++ b/view/dialog-recovery-record.html
@@ -23,7 +23,7 @@
     <!-- 编辑采收-->
     <div class="dialog-scheduling recovery-add-content">
       <div class="dialog-content">
-        <p class="center border-bottom pb10 mb20">采收记录<span class="right color-gray close-add">X</span></p>
+        <p class="center border-bottom pb10 mb20">采收记录<a class="right color-gray close-add" href="recoveryRecord.html">X</a></p>
         <div class="add-detail mb30 overflow">
             <p class="mb20">
               <span class="">采收作物：BJ-01-01号大棚番茄(红色)</span>
