--- a/view/dialog-recovery-add.html
+++ b/view/dialog-recovery-add.html
@@ -23,7 +23,7 @@
     <!-- 编辑采收-->
     <div class="dialog-scheduling recovery-add-content">
       <div class="dialog-content">
-        <p class="center border-bottom pb10">添加采收<span class="right color-gray close-add">X</span></p>
+        <p class="center border-bottom pb10">添加采收<a class="right color-gray close-add" href="recoveryRecord.html">X</a></p>
          <p class="text-left border-bottom pb10 mt20">作物信息</p>
         <div class="add-detail mb10">
             <p class="mb10">
@@ -80,7 +80,7 @@
         </div>
         <div class="center mt20">
           <span class="button bg-yellow mr20">保存</span>
-          <span class="button bg-gray close-add">返回</span>
+          <a class="button bg-gray close-add" href="recoveryRecord.html">返回</a>
         </div>
       </div>
     </div>  
