采收记录完成

--- a/view/recoveryRecord.html
+++ b/view/recoveryRecord.html
@@ -44,11 +44,15 @@
               </select>
               <select>
                 <option selected>采收</option>
-                <option>BJ-01</option>
+                <option>番茄</option>
+                <option>黄瓜</option>
               </select>
               <select>
                 <option selected>等级</option>
-                <option>一等</option>
+                <option>一级</option>
+                <option>二级</option>
+                <option>三级</option>
+                <option>特级</option>
               </select>
               <select>
                 <option selected>采收人</option>
