--- a/view/recoveryRecord.html
+++ b/view/recoveryRecord.html
@@ -77,7 +77,7 @@
             <td class="right">
               <a  class="mr20 scheduling-view pointer" href="dialog-recovery-record.html"><img src="../images/tu_18.png" class="scheduling-icon">查看</a>
               <a class="mr20 scheduling-edit pointer" href="dialog-recovery-edit.html"><img src="../images/tu_15.png" class="scheduling-icon">编辑</a>
-              <a class="mr20 scheduling-done pointer" href="dialog-recovery-add.html"><img src="../images/tu_01.png" class="scheduling-icon">确认</a>
+              <a class="mr20 scheduling-done pointer" href="dialog-recovery-print.html"><img src="../images/tu_33.png" class="scheduling-icon">打印</a>
               <span class="scheduling-delete pointer" ><img src="../images/tu_21.png" class="scheduling-icon">删除</span>
             </td>
           </tr>       
