--- a/view/recoverySaleHistory.html
+++ b/view/recoverySaleHistory.html
@@ -27,36 +27,42 @@
         <input type="date" class="mr10">
         <button style="height: 30px;line-height: 22px;">搜索</button>
         <p class="right sale-record mr10">
-          <a href="recoverySale.html" style="background-color: #e0e0e0;">今日</a>
+          <a href="recoverySale.html">今日</a>
           <a href="recoverySaleNextday.html">明日</a>
-          <a href="recoverySaleHistory.html">历史</a>
+          <a href="recoverySaleHistory.html" style="background-color: #e0e0e0;">历史</a>    
         </p>
       </div>
       <div class="scheduling-detail bg-table">
         <table class="text-left">
           <tr>
-            <th class="table-head">序号</th>
-            <th class="table-head">作物名称</th>
-            <th class="table-head">等级</th>
-            <th class="table-head">当前库存量</th>
-            <th class="table-head">今日可采量</th>
+            <th class="table-head">预采收日期</th>
+            <th class="table-head">可采收棚数量</th>
+            <th class="table-head">作物种类数量</th>
+            <th class="table-head">未来一天总采收量</th>
             <th class="table-head">未来一周总采收量</th>
+            <th class="table-head">入录人</th>
+            <th class="table-head">入录时间</th>
+            <th class="table-head">操作</th>
           </tr>
           <tr>
+            <td>2017-04-01</td>
             <td>1</td>
-            <td>大黄瓜</td>
-            <td>一等品</td>
-            <td>122.0KG</td>
-            <td>0KG</td>
-            <td>0KG</td>
+            <td>1</td>
+            <td>1.0KG</td>
+            <td>1.0KG</td>
+            <td>榆树农业局</td>
+            <td>2017-04-01</td>
+            <td><a  class="mr20 scheduling-view pointer" href="dialog-recovery-record.html"><img src="../images/tu_18.png" class="scheduling-icon">查看</a></td> 
           </tr>
           <tr>
+            <td>2017-04-01</td>
             <td>1</td>
-            <td>大黄瓜</td>
-            <td>一等品</td>
-            <td>122.0KG</td>
-            <td>0KG</td>
-            <td>0KG</td>
+            <td>1</td>
+            <td>1.0KG</td>
+            <td>1.0KG</td>
+            <td>榆树农业局</td>
+            <td>2017-04-01</td>
+            <td><a  class="mr20 scheduling-view pointer" href="dialog-recovery-record.html"><img src="../images/tu_18.png" class="scheduling-icon">查看</a></td> 
           </tr>
         </table>
       </div>
