--- a/view/recoverySaleNextday.html
+++ b/view/recoverySaleNextday.html
@@ -27,38 +27,25 @@
         <input type="date" class="mr10">
         <button style="height: 30px;line-height: 22px;">搜索</button>
         <p class="right sale-record mr10">
-          <a href="recoverySale.html" style="background-color: #e0e0e0;">今日</a>
-          <a href="recoverySaleNextday.html">明日</a>
+          <a href="recoverySale.html">今日</a>
+          <a href="recoverySaleNextday.html" style="background-color: #e0e0e0;">明日</a>
           <a href="recoverySaleHistory.html">历史</a>
         </p>
       </div>
       <div class="scheduling-detail bg-table">
         <table class="text-left">
           <tr>
-            <th class="table-head">序号</th>
-            <th class="table-head">作物名称</th>
-            <th class="table-head">等级</th>
-            <th class="table-head">当前库存量</th>
-            <th class="table-head">今日可采量</th>
+            <th class="table-head">预采收日期</th>
+            <th class="table-head">可采收棚数量</th>
+            <th class="table-head">作物种类数量</th>
+            <th class="table-head">未来一天总采收量</th>
             <th class="table-head">未来一周总采收量</th>
+            <th class="table-head">入录人</th>
+            <th class="table-head">入录时间</th>
+            <th class="table-head">操作</th>
           </tr>
-          <tr>
-            <td>1</td>
-            <td>大黄瓜</td>
-            <td>一等品</td>
-            <td>122.0KG</td>
-            <td>0KG</td>
-            <td>0KG</td>
-          </tr>
-          <tr>
-            <td>1</td>
-            <td>大黄瓜</td>
-            <td>一等品</td>
-            <td>122.0KG</td>
-            <td>0KG</td>
-            <td>0KG</td>
-          </tr>
-        </table>
+        </table>     
+        <p class="none-message"> 很遗憾，今天没有可售菜品信息 <br> 每天准确的菜品信息，是销售部门掌握菜品出产情况，制定销售目标的重要保证，请产品部门及时更新哦！</p>
       </div>
     </div>
   </div>
