--- a/css/management.css
+++ b/css/management.css
@@ -122,6 +122,7 @@ padding: 2px 5px;
   padding: 8px 20px;
   background-color: #ffffff;
   overflow: auto;
+  position: relative;
 }
 .scheduling-search input{
   width: 210px;
@@ -171,6 +172,11 @@ padding: 2px 5px;
 }
 .scheduling-detail td {
    padding: 0 20px;
+}
+
+.table-td td {
+   padding: 0 10px !important;
+   text-align: center;
 }
 .plan-table table td {
   width: 200px;
@@ -658,10 +664,11 @@ cursor: pointer;
   text-align: right;
   margin-bottom: 12px;
 }
-.recovery-banner span {
+.recovery-banner a {
   margin-left: 8px;
   overflow: hidden;
   padding: 5px 8px 9px 8px;
+  display: inline-block;
   border-bottom: 2px solid transparent;
 }
 .recovery-banner .recovery-banner-active {
@@ -745,4 +752,30 @@ input[type="checkbox"] {
   border-left: 0;
   border-right: 0;
   border-radius: 0;
+}
+
+.none-message {
+  text-align: center;
+  position: absolute;
+  height: 100px;
+  width: 400px;
+  left: 50%;
+  top: 50%;
+  margin-top: -50px;
+  margin-left: -200px;
+  line-height: 1.7;
+
+}
+
+/*预采管理*/
+.add-yucai {
+  height: 30px;
+  width: 90px;
+  border: 0;
+  text-align: 10px;
+  text-indent: 9px;
+}
+.add-yucai option {
+  background-color: #ffffff;
+  color: #333333;
 }
