--- a/view/recoveryRecord.html
+++ b/view/recoveryRecord.html
@@ -19,7 +19,7 @@
     <div class="scheduling-content">
       <div class="recovery-banner">
         <a class="recovery-banner-active" href="recoveryRecord.html">采收记录</a>
-        <a>预采管理</a>
+        <a href="recoveryMgmt.html">预采管理</a>
         <a href="recoverySale.html">预售管理</a>
       </div>
       <div class="scheduling-search">
@@ -36,7 +36,7 @@
             <td class="table-head"></td>
             <td class="table-head"></td>
             <td class="table-head right recovery-record">
-              <input id="date-range" size="40" value="选择时间"> 
+              <input id="date-range" class="bg-green" size="40" value="选择时间"> 
               <img src="../images/tu_22.png" height="13" width="13">
               <select>
                 <option selected>区域</option>
