--- a/view/recoverySale.html
+++ b/view/recoverySale.html
@@ -19,7 +19,7 @@
     <div class="scheduling-content">
       <div class="recovery-banner">
         <a  href="recoveryRecord.html">采收记录</a>
-        <a>预采管理</a>
+        <a href="recoveryMgmt.html">预采管理</a>
         <a class="recovery-banner-active" href="recoverySale.html">预售管理</a>
       </div>
       <div class="scheduling-search">
