--- a/view/recoverySaleNextday.html
+++ b/view/recoverySaleNextday.html
@@ -31,6 +31,10 @@
           <a href="recoverySaleNextday.html" style="background-color: #e0e0e0;">明日</a>
           <a href="recoverySaleHistory.html">历史</a>
         </p>
+        <p>
+          <span class="mr20">预采时间选择：<img src="../images/tu_34.png" height="16" width="16" >按日</span>
+           <span class="mr20 color-gray">选择预采时间：2017-04-13 - 2017-04-18</span>
+        </p>
       </div>
       <div class="scheduling-detail bg-table">
         <table class="text-left">
