--- a/view/dialog-recoverymgmt-add1-month.html
+++ b/view/dialog-recoverymgmt-add1-month.html
@@ -35,10 +35,10 @@
         </p>
         <p class="mt20  scheduling-search" > 
           <span class="mr20">预采时间选择：
-            <img src="../images/tu_36.png" width="16" style="vertical-align: middle;margin-right: 4px;">按日 
-            <img src="../images/tu_36.png" class="ml10" width="16" style="vertical-align: middle;margin-right: 4px;">按周
-            <img src="../images/tu_34.png"  class="ml10" width="16" style="vertical-align: middle;margin-right: 4px;">按月
-            <img src="../images/tu_36.png"  class="ml10" width="16" style="vertical-align: middle;margin-right: 4px;">按年
+           <a href="dialog-recoverymgmt-add1.html"><img src="../images/tu_36.png" width="16" style="vertical-align: middle;margin-right: 4px;">按日</a>
+            <a href="dialog-recoverymgmt-add1-week.html"><img src="../images/tu_36.png" class="ml10" width="16" style="vertical-align: middle;margin-right: 4px;">按周</a>
+            <a href="dialog-recoverymgmt-add1-month.html"><img src="../images/tu_34.png"  class="ml10" width="16" style="vertical-align: middle;margin-right: 4px;">按月</a>
+            <a href="dialog-recoverymgmt-add1-year.html"><img src="../images/tu_36.png"  class="ml10" width="16" style="vertical-align: middle;margin-right: 4px;">按年</a>
           </span>
           <span class="mr20 ">选择预采时间： <input id="begintime" type="text" onclick="setmonth(this)" readonly="readonly" /> </span>
           <button class="mr20">确定</button>
